tests/custom/STARIS_2022/operation-type-errors/sum-type-error-02/stderr.expected
Error:
    sum-type-error.essence:2:19:
  |
2 | such that i = sum([false, true, false])
  |                   ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Integer elements"
	Got: bool

cat: *.solution: No such file or directory
